# Overt

./: CARD_SYSTEM_USAGE.md  LIBC_REPLACEMENT_SUMMARY.md  LOG_FORMAT_UNIFICATION_SUMMARY.md  LOG_IMPLEMENTATION_SUMMARY.md  LOG_LEVEL_GUIDE.md  LOG_LEVEL_OPTIMIZATION_SUMMARY.md  LOG_SYSTEM_README.md  README.md  README_waitForAllTasks_Behavior_Update.md  README_zThread_Simplified_Architecture.md  README_zThread_shared_mutex.md  README_zThread_wrappers.md  UI_OPTIMIZATION_SUMMARY.md  build.gradle  hook.js  overt.jks  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/debug/: output-metadata.json
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/example/overt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/overt/: ISharedMemoryService.aidl
app/src/main/cpp/: CMakeLists.txt  class_loader_info.cpp  class_loader_info.h  classloader.cpp  classloader.h  config.h  crc.cpp  crc.h  device_info.cpp  device_info.h  fd_info.cpp  fd_info.h  libc.cpp  libc.h  linker_info.cpp  linker_info.h  local_network_info.cpp  local_network_info.h  map.h  map_test.cpp  maps_info.cpp  maps_info.h  mounts_info.cpp  mounts_info.h  native-lib.cpp  nonstd_libc.cpp  nonstd_libc.h  obfusheader.h  package_info.cpp  package_info.h  plt.c  plt.h  port_info.cpp  port_info.h  root_file_info.cpp  root_file_info.h  ssl_info.cpp  ssl_info.h  string.cpp  string.h  (+49 more)
app/src/main/java/com/example/overt/: DeviceInfoProvider.java  InfoCard.java  InfoCardContainer.java  MainActivity.java  MainApplication.java  NativeUpdateBus.java  Server.java  ServerStarter.java
app/src/main/java/com/example/overt/device/: DeviceInfoProvider.java  package_info.java  system_info.java
app/src/main/java/com/example/overt/system_info/: system_info.java
app/src/main/java/com/example/overt/tee_info/: Asn1Utils.java  Attestation.java  AuthorizationList.java  RootOfTrust.java  TEEStatus.java
app/src/main/java/tee_info/: Asn1Utils.java  Attestation.java  AuthorizationList.java  RootOfTrust.java  TEEStatus.java
app/src/main/res/drawable/: card_border_background.xml
app/src/main/res/layout/: activity_main.xml  item_info_card.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/test/java/com/example/overt/: ExampleUnitTest.java
buildSrc/: build.gradle
buildSrc/src/main/java/com/heiko/buildsrc/: MyPlugin.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
zconfig/: build.gradle
zconfig/src/androidTest/java/com/example/zconfig/: ExampleInstrumentedTest.java
zconfig/src/main/: AndroidManifest.xml
zconfig/src/main/cpp/: CMakeLists.txt  zConfig.h  zConfigTest.cpp
zconfig/src/main/java/com/example/zconfig/: MainActivity.java
zconfig/src/main/res/values/: strings.xml  themes.xml
zconfig/src/main/res/values-night/: themes.xml
zconfig/src/test/java/com/example/zconfig/: ExampleUnitTest.java
zcore/: build.gradle
zcore/src/main/: AndroidManifest.xml
zcore/src/main/cpp/: CMakeLists.txt  zBinder.cpp  zBinder.h  zBroadCast.cpp  zBroadCast.h  zChildThread.cpp  zChildThread.h  zClassLoader.cpp  zClassLoader.h  zCoreTest.cpp  zCrc32.cpp  zCrc32.h  zElf.cpp  zElf.h  zFile.cpp  zFile.h  zHttps.cpp  zHttps.h  zJavaVm.cpp  zJavaVm.h  zJson.cpp  zJson.h  zLinker.cpp  zLinker.h  zProcMaps.cpp  zProcMaps.h  zSensorManager.cpp  zSensorManager.h  zSha256.cpp  zSha256.h  zShell.cpp  zShell.h  zTask.cpp  zTask.h  zTee.cpp  zTee.h  zTeeCert.cpp  zTeeCert.h  zThread.cpp  zThread.h  (+3 more)
zcore/src/main/java/com/example/zcore/: Main.java  MainActivity.java
zcore/src/main/res/layout/: activity_main.xml
zcore/src/main/res/values/: strings.xml
zinfo/: build.gradle
zinfo/src/main/: AndroidManifest.xml
zinfo/src/main/aidl/com/example/zinfo/: ISharedMemoryService.aidl
zinfo/src/main/cpp/: CMakeLists.txt  zClassLoaderInfo.cpp  zClassLoaderInfo.h  zFingerInfo.cpp  zFingerInfo.h  zInfoTest.cpp  zIsoloatedProcess.cpp  zIsoloatedProcess.h  zLinkerInfo.cpp  zLinkerInfo.h  zLocalNetworkInfo.cpp  zLocalNetworkInfo.h  zLogcatInfo.cpp  zLogcatInfo.h  zMapsInfo.cpp  zMapsInfo.h  zMountsInfo.cpp  zMountsInfo.h  zPackageInfo.cpp  zPackageInfo.h  zPortInfo.cpp  zPortInfo.h  zProcInfo.cpp  zProcInfo.h  zRootFileInfo.cpp  zRootStateInfo.cpp  zRootStateInfo.h  zSensorInfo.cpp  zSensorInfo.h  zSideChannelInfo.cpp  zSideChannelInfo.h  zSignatureInfo.cpp  zSignatureInfo.h  zSslInfo.cpp  zSslInfo.h  zSystemPropInfo.cpp  zSystemSettingInfo.cpp  zTaskInfo.cpp  zTaskInfo.h  zTeeInfo.cpp  (+2 more)
zinfo/src/main/java/com/example/zinfo/: Main.java  MainActivity.java  Server.java  ServerStarter.java
zinfo/src/main/res/layout/: activity_main.xml
zinfo/src/main/res/values/: strings.xml
zlibc/: build.gradle
zlibc/src/main/: AndroidManifest.xml
zlibc/src/main/cpp/: CMakeLists.txt  syscall.h  zLibc.cpp  zLibc.h  zLibcTest.cpp  zLibcUtil.cpp  zLibcUtil.h  zSyscall.h
zlibc/src/main/java/com/example/zlibc/: Main.java  MainActivity.java
zlibc/src/main/res/layout/: activity_main.xml
zlibc/src/main/res/values/: strings.xml
zlog/: build.gradle
zlog/src/main/cpp/: CMakeLists.txt  zLog.cpp  zLog.h  zLogTest.cpp
zlog/src/main/java/com/example/zlog/: Main.java  MainActivity.java
zlog/src/main/res/layout/: activity_main.xml
zlog/src/main/res/values/: strings.xml
zstd/: build.gradle
zstd/src/main/cpp/: CMakeLists.txt  map.h  queue.h  vector.h  zMap.h  zStd.h  zStdTest.cpp  zStdUtil.cpp  zStdUtil.h  zString.cpp  zString.h  zVector.h
zstd/src/main/java/com/example/zstd/: Main.java  MainActivity.java
zstd/src/main/res/layout/: activity_main.xml
zstd/src/main/res/values/: strings.xml
